# raster-to-stac

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  environment.yaml  intertwin_test.ipynb  main.py  metadata.json  pyproject.toml  requirements.txt  setup.py  setup_conda.sh
docs/source/: conf.py  index.rst
docs/source/guide/: contributing.rst  installation.rst  quickstart.rst
examples/: dtype_example.ipynb  soilgrid_example.ipynb
examples/stac/BD_SOILGRIDS/: BD_SOILGRIDS.json  inline_items.csv
examples/stac/BD_SOILGRIDS/items/: 20200301000000.json  20240301000000.json
raster2stac/: __init__.py  _version.py  raster2stac.py  rioxarray_stac.py  test.ipynb  write_scale_and_offset.py
tests/: list_objects_prefix.py  raster2stac_test.py  rioxarray_stac_test.py  stac_validate_test.py
